[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/entities/defenses/Defense.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/defenses/Hair.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/nose-hair.png" type="Texture" id=3]
[ext_resource path="res://src/components/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/nose_hair_ignite.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/nose_hair_passing_thorugh.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[node name="Hair" instance=ExtResource( 1 )]
collision_layer = 2147483712
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -14 )
frames = SubResource( 3 )
animation = "default"
frame = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="HP" parent="." index="3"]
total = 2.0

[node name="HitBox" parent="." index="4" instance=ExtResource( 4 )]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 5 )

[node name="BurningSound" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 5 )

[node name="PassingSound" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 6 )

[editable path="HurtBox"]

[editable path="HitBox"]
